update:HTML part completed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component's Library</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 
     <h2>@paragraph</h2>
 
-    <p>A small intro on all the functionalities of HTML</p>
+    <p>A small introduction on all the functionalities of HTML</p>
 
     <hr>
 
