update:fonts,strong

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component's Library</title>
+    <!--style>
+        body{
+            color: blue;
+        }
+    </style-->
     <link rel="stylesheet" href="styles.css"/>
 </head>
 
@@ -17,6 +22,7 @@
     <h2>@paragraph</h2>
 
     <p>A small introduction on all the functionalities of HTML</p>
+    <p>This is used to show a <strong>bold</strong> text</p>
 
     <hr>
 
