--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
     <h2>@containers</h2>
 
-    <h3>@fluid</h3>
+    <h3 class="container">@fluid </h3>
 
-    <fluid> Contents of fluid containers.</fluid>
+    <fluid id="fluid"> Contents of fluid containers.</fluid>
 
-    <h3>@center</h3>
+    <h3 class="center-container">@center</h3>
 
     <center>Contents of a Center Container.</center>
 
