--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
     <h2>@links</h2>
 
-    <a href="address">Primary Link name</a>
+    <a class="link primary-link" href="address">Primary Link name</a>
 
-    <a href="address">Secondary Link name</a>
+    <a class="link secondary-link" href="address">Secondary Link name</a>
 
     <hr>
 
