--- a/index.html
+++ b/index.html
@@ -52,32 +52,44 @@
 
     <h2>@links</h2>
 
-    <a class="link primary-link" href="address">Primary Link name</a>
+    <a class="link link-primary" href="">Primary Link name</a>
 
-    <a class="link secondary-link" href="address">Secondary Link name</a>
+    <a class="link link-secondary" href="">Secondary Link name</a>
 
     <hr>
 
     <h2>@lists</h2>
 
 
-    <p>This is ordered list of portfolio in which what all I know</p>
+    <p>This is unordered list of portfolio in which what all I know</p>
 
-    <ol>
+    <ul class="list-non-bullet">
         <li>C</li>
         <li>C++</li>
         <li>HTML</li>
         <li>CSS</li>
         <li>Javascript</li>
-    </ol>
+    </ul>
 
-    <div>An unordered list about my hobbies</div>
+    <div>An unordered list about my hobbies, which are inline </div>
 
     <div>Which mainly include :</div>
 
-    <ul>
-        <li>Cricket</li><li>Badminton</li><li>Podcasts</li><li>Stories</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Cricket</li>
+        <li class="list-item-inline">Badminton</li>
+        <li class="list-item-inline">Podcasts</li>
+        <li class="list-item-inline">Stories</li>
     </ul>
+
+    <div>This is a reverse list to show different projects :</div>
+
+    <ol reversed>
+        <li>Ericsson</li>
+        <li>IPInfusion</li>
+        <li>Juniper</li>
+        <li>Harry Potter Quiz</li>
+    </ol>
 
     <hr>
 
