--- a/index.html
+++ b/index.html
@@ -95,11 +95,22 @@
 
     <h2>@nav</h2>
 
-    <nav> This is used to navigate around the website.</nav>
+    <nav class="navigation Container"> This is used to navigate around the website.
 
+    <div class="nav-brand">Links to different section which can be navigated</div>
+
+    <ul class="nav-pills">
+        <li class="link list-non-bullet list-item-inline"><a class="link" href="">home</a></li>
+        <li class="link list-non-bullet list-item-inline"><a class="link"href="">about</a></li>
+        <li class="link list-non-bullet list-item-inline"><a class="link" href="">connect</a></li>
+    </ul>
+
+    </nav>
     <hr>
 
-    <header>This is a header file. </header>
+    <h2>@header</h2>
+
+    <header>This is a header file. 
 
     <img src="images/Main-image.svg" alt="">
 
@@ -109,6 +120,8 @@
 
     <section>Used to describe a section.</section>
 
+    </header>
+    
     <hr>
 
     <h2>@footer</h2>
