--- a/index.html
+++ b/index.html
@@ -110,18 +110,35 @@
 
     <h2>@header</h2>
 
-    <header>This is a header file. 
+    <header class="hero">
+    <img class="hero-image" src="images/Main-image.svg" alt="">
 
-    <img src="images/Main-image.svg" alt="">
+    <h1 class="hero-heading">This is a Prototype <span class="hero-main"> Resume</span> 
+    </h1>
+</header>
 
     <hr>
 
     <h2>@section</h2>
 
-    <section>Used to describe a section.</section>
+    <section class="section">
+        <div class="container center-container">
+    <h1>white section</h1>
 
-    </header>
-    
+    <p>Used to describe a section.</p>
+</div>
+    </section>
+
+    <section class="section ow">
+        <div class="container center-container">
+        <h1>off-white section</h1>
+
+        <p>This is an off-white section</p>
+    </div>
+
+    </section>
+
+
     <hr>
 
     <h2>@footer</h2>
