--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             color: blue;
         }
     </style-->
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -97,13 +97,13 @@
 
     <nav class="navigation Container"> This is used to navigate around the website.
 
-    <div class="nav-brand">Links to different section which can be navigated</div>
+        <div class="nav-brand">Links to different section which can be navigated</div>
 
-    <ul class="nav-pills">
-        <li class="link list-non-bullet list-item-inline"><a class="link" href="">home</a></li>
-        <li class="link list-non-bullet list-item-inline"><a class="link"href="">about</a></li>
-        <li class="link list-non-bullet list-item-inline"><a class="link" href="">connect</a></li>
-    </ul>
+        <ul class="nav-pills">
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="">home</a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="">about</a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="">connect</a></li>
+        </ul>
 
     </nav>
     <hr>
@@ -111,11 +111,11 @@
     <h2>@header</h2>
 
     <header class="hero">
-    <img class="hero-image" src="images/Main-image.svg" alt="">
+        <img class="hero-image" src="images/Main-image.svg" alt="">
 
-    <h1 class="hero-heading">This is a Prototype <span class="hero-main"> Resume</span> 
-    </h1>
-</header>
+        <h1 class="hero-heading">This is a Prototype <span class="hero-main"> Resume</span>
+        </h1>
+    </header>
 
     <hr>
 
@@ -123,18 +123,18 @@
 
     <section class="section">
         <div class="container center-container">
-    <h1>white section</h1>
+            <h1>white section</h1>
 
-    <p>Used to describe a section.</p>
-</div>
+            <p>Used to describe a section.</p>
+        </div>
     </section>
 
     <section class="section ow">
         <div class="container center-container">
-        <h1>off-white section</h1>
+            <h1>off-white section</h1>
 
-        <p>This is an off-white section</p>
-    </div>
+            <p>This is an off-white section</p>
+        </div>
 
     </section>
 
@@ -143,7 +143,16 @@
 
     <h2>@footer</h2>
 
-    <footer>Used to define the footer of our website</footer>
+    <footer class="footer">
+        <div>
+            Used to define the footer of our website, and link the socials here.
+    </div>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline"><a class="link" href=""> socialone</a></li>
+        <li class="list-item-inline link"><a class="link" href="">socialtwo</a></li>
+        <li class="link list-item-inline"><a class="link" href="">socialthree</a></li>
+    </ul>
+    </footer>
 
     <hr>
 
