update:home page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         im<span class="nav-brand">Pulse</span>
         <ul class="nav-pills">
             <li class="link list-non-bullet list-item-inline"><a class="link" href=""><b>Home</b></a></li>
-            <li class="link list-non-bullet list-item-inline"><a class="link" href="">Projects</a></li>
-            <li class="link list-non-bullet list-item-inline"><a class="link" href="">Connect</a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="projects.html">Projects</a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="blogs.html">Blogs</a></li>
         </ul>
 
     </nav>
@@ -66,6 +66,16 @@
     </section>
 
 
+    <footer class="footer">
+        <div class="footer-header">
+            Connect with me
+    </div>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline"><a class="link" href="https://github.com/VishadSaxena"> github</a></li>
+        <li class="list-item-inline link"><a class="link" href="https://twitter.com/17Bageera">twitter</a></li>
+        <li class="link list-item-inline"><a class="link" href="https://www.linkedin.com/in/vishad-saxena-54a4655a">linkedIn</a></li>
+    </ul>
+    </footer>
     
 </body>
 </html>
