--- a/lib/components.html
+++ b/lib/components.html
@@ -144,7 +144,7 @@
     <h2>@footer</h2>
 
     <footer class="footer">
-        <div>
+        <div class="footer-header">
             Used to define the footer of our website, and link the socials here.
     </div>
     <ul class="list-non-bullet">
