--- a/blogs.html
+++ b/blogs.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Blog post</h1>
+   
+
+    <nav class="navigation Container"> 
+
+        im<span class="nav-brand">Pulse</span>
+        <ul class="nav-pills">
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="index.html">Home</a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="projects.html">Projects</a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="blogs.html"><b>Blogs</b></a></li>
+        </ul>
+
+    </nav>
+
+
 </body>
 </html>
