--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         im<span class="nav-brand">Pulse</span>
         <ul class="nav-pills">
-            <li class="link list-non-bullet list-item-inline"><a class="link" href=""><b>Home</b></a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="index.html"><b>Home</b></a></li>
             <li class="link list-non-bullet list-item-inline"><a class="link" href="projects.html">Projects</a></li>
             <li class="link list-non-bullet list-item-inline"><a class="link" href="blogs.html">Blogs</a></li>
         </ul>
