--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Projects</title>
 </head>
 <body>
 
-    <h1>Projects</h1>
+   
     
+    <nav class="navigation Container"> 
+
+        im<span class="nav-brand">Pulse</span>
+        <ul class="nav-pills">
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="index.html">Home</a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="projects.html"><b> Projects</b></a></li>
+            <li class="link list-non-bullet list-item-inline"><a class="link" href="blogs.html">Blogs</a></li>
+        </ul>
+
+    </nav>
+
 </body>
 </html>
