update:links updated + projects updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Projects</h1>
 
             <p>Worked on different projects few of which are open-source</p>
-            <a class="link link-primary" href="">Project List</a>
+            <a class="link link-primary" href="projects.html">Project List</a>
         </div>
 
     </section>
