--- a/projects.html
+++ b/projects.html
@@ -22,5 +22,29 @@
 
     </nav>
 
+
+
+    <ul class="link-active list-non-bullet">
+        <li>
+            A Quiz on how well you know me?
+        </li>
+        <br>
+        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-2#index.js">Do you Know Vishad?</a>
+        <br>
+        <br>
+        <a class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-2#index.js">Source Code</a>
+        <br>
+        <br>
+
+        <li>
+            A Quiz on Potterverse
+        </li>
+        <br>
+        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <br>
+        <br>
+        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+    </ul>
+
 </body>
 </html>
