--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,51 @@
         <br>
         <br>
         <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <br>
+        <br>
+
+        <li>
+            An app to understand Minions speak
+        </li>
+        <br>
+        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <br>
+        <br>
+        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <br>
+        <br>
+
+        <li>
+            An pp to convert an english statement to Dothraki
+        </li>
+        <br>
+        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <br>
+        <br>
+        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <br>
+        <br>
+
+        <li>
+            An app to undestand which fruits emojis is used. 
+        </li>
+        <br>
+        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <br>
+        <br>
+        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <br>
+        <br>
+        
+        <li>
+            An app to provide a bookshelf for different geners of books.  
+        </li>
+        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <br>
+        <br>
+        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <br>
+        <br>
     </ul>
 
 </body>
