Updated links on Projects

--- a/projects.html
+++ b/projects.html
@@ -51,10 +51,10 @@
             An app to understand Minions speak
         </li>
         <br>
-        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <a class="link link-primary link-active" href="change-to-minions.netlify.app/">English to Minions</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Minions-speak">Source Code</a>
         <br>
         <br>
 
@@ -62,10 +62,10 @@
             An pp to convert an english statement to Dothraki
         </li>
         <br>
-        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <a class="link link-primary link-active" href="dothraki-convertor.netlify.app">Covert English to Dothraki</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Dothraki-convertor">Source Code</a>
         <br>
         <br>
 
@@ -73,20 +73,21 @@
             An app to undestand which fruits emojis is used. 
         </li>
         <br>
-        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <a class="link link-primary link-active" href="tvzs7c.csb.app/">Identify the Fruit emoji</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Food-emoji">Source Code</a>
         <br>
         <br>
         
         <li>
             An app to provide a bookshelf for different geners of books.  
         </li>
-        <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
+        <br>
+        <a class="link link-primary link-active" href="edo3us.csb.app/">Potterverse Quiz</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Bookshelf-Mark-Nine">Source Code</a>
         <br>
         <br>
     </ul>
