--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
             An app to understand Minions speak
         </li>
         <br>
-        <a class="link link-primary link-active" href="change-to-minions.netlify.app/">English to Minions</a>
+        <a class="link link-primary link-active" href="https://change-to-minions.netlify.app/">English to Minions</a>
         <br>
         <br>
         <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Minions-speak">Source Code</a>
@@ -59,10 +59,10 @@
         <br>
 
         <li>
-            An pp to convert an english statement to Dothraki
+            An app to convert an english statement to Dothraki
         </li>
         <br>
-        <a class="link link-primary link-active" href="dothraki-convertor.netlify.app">Covert English to Dothraki</a>
+        <a class="link link-primary link-active" href="https://dothraki-convertor.netlify.app/">Covert English to Dothraki</a>
         <br>
         <br>
         <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Dothraki-convertor">Source Code</a>
@@ -73,7 +73,7 @@
             An app to undestand which fruits emojis is used. 
         </li>
         <br>
-        <a class="link link-primary link-active" href="tvzs7c.csb.app/">Identify the Fruit emoji</a>
+        <a class="link link-primary link-active" href="https://tvzs7c.csb.app/">Identify the Fruit emoji</a>
         <br>
         <br>
         <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Food-emoji">Source Code</a>
@@ -84,7 +84,7 @@
             An app to provide a bookshelf for different geners of books.  
         </li>
         <br>
-        <a class="link link-primary link-active" href="edo3us.csb.app/">Potterverse Quiz</a>
+        <a class="link link-primary link-active" href="https://edo3us.csb.app/">BookShelf App</a>
         <br>
         <br>
         <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Bookshelf-Mark-Nine">Source Code</a>
