--- a/blogs.html
+++ b/blogs.html
@@ -21,6 +21,41 @@
 
     </nav>
 
+    <ol reversed>
+        <div class="container container-center">
+          <li>
+            <h3>Dummy Blog 2</h3>
+            <small> Nov, 2022 </small>
+            <p>
+              This a the secod dummy blog which I have created where I will be rambing about my favourite IPL franchise, Lucknow SuperGiants, though they have played only a single season, it is my favuriteteam among all.
+            </p>
+            <a class="link link-primary link-active"
+              href="">read more</a>
+          </li>
+          <li>
+            <h3>Dummy Blog 1</h3>
+            <small> Jan, 2023 </small>
+            <p>
+              This is my 1st dummy blog wheeI wll be writing about my favourite movie, Guide(1965), which stars Dv Anand, and Weeda Rehma Ji, this was revelation for me when I saw how ur protaginst is a flawed yet redeemable person and te end actualy makes me what to think about how life should be lived.   
+            </p>
+            <a class="link link-primary link-active"
+              href="">read more</a>
+          </li>
+
+          <br>
+          <br>
+
+
+    <footer class="footer">
+        <div class="footer-header">
+            Connect with me
+    </div>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline"><a class="link" href="https://github.com/VishadSaxena"> github</a></li>
+        <li class="list-item-inline link"><a class="link" href="https://twitter.com/17Bageera">twitter</a></li>
+        <li class="link list-item-inline"><a class="link" href="https://www.linkedin.com/in/vishad-saxena-54a4655a">linkedIn</a></li>
+    </ul>
+    </footer>
 
 </body>
 </html>
