--- a/projects.html
+++ b/projects.html
@@ -92,5 +92,16 @@
         <br>
     </ul>
 
+    <footer class="footer">
+        <div class="footer-header">
+            Connect with me
+    </div>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline"><a class="link" href="https://github.com/VishadSaxena"> github</a></li>
+        <li class="list-item-inline link"><a class="link" href="https://twitter.com/17Bageera">twitter</a></li>
+        <li class="link list-item-inline"><a class="link" href="https://www.linkedin.com/in/vishad-saxena-54a4655a">linkedIn</a></li>
+    </ul>
+    </footer>
+
 </body>
 </html>
