--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         <a class="link link-primary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Potterverse Quiz</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
+        <a class="link link-secondary link-active" href="https://replit.com/@VishadSaxena/Assignment-1#index.js">Source Code</a>
         <br>
         <br>
 
@@ -54,7 +54,7 @@
         <a class="link link-primary link-active" href="https://change-to-minions.netlify.app/">English to Minions</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Minions-speak">Source Code</a>
+        <a class="link link-secondary link-active" href="https://github.com/VishadSaxena/Minions-speak">Source Code</a>
         <br>
         <br>
 
@@ -65,7 +65,7 @@
         <a class="link link-primary link-active" href="https://dothraki-convertor.netlify.app/">Covert English to Dothraki</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Dothraki-convertor">Source Code</a>
+        <a class="link link-secondary link-active" href="https://github.com/VishadSaxena/Dothraki-convertor">Source Code</a>
         <br>
         <br>
 
@@ -76,7 +76,7 @@
         <a class="link link-primary link-active" href="https://tvzs7c.csb.app/">Identify the Fruit emoji</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Food-emoji">Source Code</a>
+        <a class="link link-secondary link-active" href="https://github.com/VishadSaxena/Food-emoji">Source Code</a>
         <br>
         <br>
         
@@ -87,7 +87,7 @@
         <a class="link link-primary link-active" href="https://edo3us.csb.app/">BookShelf App</a>
         <br>
         <br>
-        <a href class="link link-secondary link-active" href="https://github.com/VishadSaxena/Bookshelf-Mark-Nine">Source Code</a>
+        <a class="link link-secondary link-active" href="https://github.com/VishadSaxena/Bookshelf-Mark-Nine">Source Code</a>
         <br>
         <br>
     </ul>
