updated dummy blogs

--- a/blogs.html
+++ b/blogs.html
@@ -30,7 +30,7 @@
               This a the secod dummy blog which I have created where I will be rambing about my favourite IPL franchise, Lucknow SuperGiants, though they have played only a single season, it is my favuriteteam among all.
             </p>
             <a class="link link-primary link-active"
-              href="">read more</a>
+              href="/dummy-blog-1.html">read more</a>
           </li>
           <li>
             <h3>Dummy Blog 1</h3>
@@ -39,7 +39,7 @@
               This is my 1st dummy blog wheeI wll be writing about my favourite movie, Guide(1965), which stars Dv Anand, and Weeda Rehma Ji, this was revelation for me when I saw how ur protaginst is a flawed yet redeemable person and te end actualy makes me what to think about how life should be lived.   
             </p>
             <a class="link link-primary link-active"
-              href="">read more</a>
+              href="/dummy-blog-1.html">read more</a>
           </li>
 
           <br>
