--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
         <a class="link link-primary link-active" href="https://tvzs7c.csb.app/">Identify the Fruit emoji</a>
         <br>
         <br>
-        <a class="link link-secondary link-active" href="https://github.com/VishadSaxena/Food-emoji">Source Code</a>
+        <a class="link link-secondary link-active" href="https://codesandbox.io/s/tvzs7c">Source Code</a>
         <br>
         <br>
         
@@ -87,7 +87,7 @@
         <a class="link link-primary link-active" href="https://edo3us.csb.app/">BookShelf App</a>
         <br>
         <br>
-        <a class="link link-secondary link-active" href="https://github.com/VishadSaxena/Bookshelf-Mark-Nine">Source Code</a>
+        <a class="link link-secondary link-active" href="https://codesandbox.io/s/edo3us">Source Code</a>
         <br>
         <br>
     </ul>
